@@ -29,6 +29,7 @@ Improvements::
 
   * Use attribute, if set, as seed value for counter even if not already registered as a counter (#4014)
   * Allow subs attribute value on Inline node returned by process method for custom inline macro to be a String (#3938)
+  * Allow value of `user-home` attribute to be overridden by API or CLI (#3732)
 
 Build / Infrastructure::
 
